--- a/electricity/NewTCNQuantile/bestPointHuber.ipynb
+++ b/electricity/NewTCNQuantile/bestPointHuber.ipynb
@@ -29,7 +29,7 @@
    "source": [
     "### The input dataset\n",
     "ctx = mx.gpu(3)\n",
-    "with open('new_feature_prepare.pkl', 'rb') as f:\n",
+    "with open('feature_prepare.pkl', 'rb') as f:\n",
     "    [trainX_dt,trainX2_dt, trainY_dt,trainY2_dt, testX_dt, testX2_dt,testY_dt,testY2_dt] = pickle.load(f)"
    ]
   },
@@ -11809,7 +11809,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
